--- a/res/layout/activity_main.xml
+++ b/res/layout/activity_main.xml
@@ -15,7 +15,7 @@
       android:layout_alignParentTop="true"
       android:layout_centerHorizontal="true"
       android:drawSelectorOnTop="false"
-      android:background="@android:color/background_dark"
+      android:background="@android:color/white"
       android:listSelector="@android:color/darker_gray" >
 
    </ListView>
