--- a/res/layout/activity_tracking.xml
+++ b/res/layout/activity_tracking.xml
@@ -9,8 +9,15 @@
     tools:context="com.example.wifiprojekt.TrackingActivity" >
 
     <TextView
-        android:layout_width="wrap_content"
+        android:id="@+id/textView1"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/hello_world" />
+        android:layout_alignParentTop="true"
+        android:layout_centerHorizontal="true"
+        android:gravity="center" 
+        android:layout_marginTop="16dp"
+        android:background="#0A730A"
+        android:textColor="#ffffff"
+        android:textSize="@dimen/font_size" />
 
 </RelativeLayout>
